# POO20221-SCO

./: Proof.docx  ~$Proof.docx
Correcion Polimorfismo & Herencia_Daniel vasquez/: AbstractFigura.cpp  AbstractFigura.h  CMakeLists.txt  Circulo.cpp  Circulo.h  Cuadrado.cpp  Cuadrado.h  README.md  Rectangulo.cpp  Rectangulo.h  Triangulo.cpp  Triangulo.h  View.cpp  View.h  main.cpp
Referencias y constantes/: BasePlusComissionEmployee.cpp  BasePlusComissionEmployee.h  CMakeLists.txt  ComissionEmployee.cpp  ComissionEmployee.h  DailyEmployee.cpp  DailyEmployee.h  Employee.cpp  Employee.h  HourlyEmployee.cpp  HourlyEmployee.h  SalariedEmployee.cpp  SalariedEmployee.h  main.cpp
